更改文档目录名称

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 </body>
 <script>
-    document.location.href = "./doc/index.html"
+    document.location.href = "docs/index.html"
 </script>
 </html>
